--- a/blocks/main-page/main-page.css
+++ b/blocks/main-page/main-page.css
@@ -11,7 +11,7 @@
   position: relative;
 }
 
-@media screen and (max-width: 320px;) {
+@media screen and (max-width: 320px) {
   .main-page {
     max-width: 320px;
   }
