--- a/blocks/main-page/main-page.css
+++ b/blocks/main-page/main-page.css
@@ -4,7 +4,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: black;
-  max-width: 1280px;
+  max-width: 100vw;
   min-height: 100vh;
   margin: auto;
   color: #ffffff;
