--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,34 +1,26 @@
 .elements {
-  max-width: 69%;
+  max-width: 80%; 
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(3, max-content);
+  grid-template-columns: repeat(auto-fit, 282px);
   grid-template-rows: repeat(2, 1fr);
   gap: 17px;
   padding-top: 47.25px;
+  justify-content: center;
 }
-/*
+
+
+
 @media screen and (max-width: 1200px) {
   .elements {
-    max-width: calc(100% - 2 * 160px);
-  }
-}
-
-@media screen and (max-width: 1100px) {
-  .elements {
-    max-width: calc(100% - 2 * 130px);
-  }
-}
-
-@media screen and (max-width: 1024px) {
-  .elements {
     max-width: calc(100% - 2 * 30px);
-  }
-}
+  }}
+
+
 
 @media screen and (max-width: 1000px) {
   .elements {
-    max-width: calc(100% - 2 * 40px);
+    max-width: calc(100% - 2 * 10px);
   }
 }
 
@@ -37,27 +29,21 @@
     max-width: calc(100% - 2 * 10px);
   }
 }
-@media screen and (max-width: 900px) {
-  .elements {
-    grid-template-columns: repeat(2, max-content);
-    grid-template-rows: repeat(2, 1fr);
-    max-width: calc(100% - 2 * 160px);
-  }
-}
 
 @media screen and (max-width: 768px) {
   .elements {
     grid-template-columns: repeat(2, max-content);
-    grid-template-rows: repeat(2, 1fr);
-    max-width: calc(100% - 2 * 100px);
+    grid-template-rows: repeat(2, 1fr); 
+    max-width: calc(100% - 2 * 10px);
   }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 665px) {
   .elements {
     grid-template-columns: repeat(2, max-content);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr); 
     max-width: calc(100% - 2 * 40px);
+    gap: 10px;
   }
 }
 
@@ -71,21 +57,22 @@
 @media screen and (max-width: 500px) {
   .elements {
     grid-template-columns: 1fr;
-    max-width: calc(100% - 2 * 80px);
+   max-width: calc(100% - 2 * 80px); 
   }
 }
 
 @media screen and (max-width: 500px) {
   .elements {
     grid-template-columns: 1fr;
-    max-width: calc(100% - 2 * 50px);
+    max-width: calc(100% - 2 * 50px); 
   }
 }
-*/
+
 @media screen and (max-width: 320px) {
   .elements {
     grid-template-columns: 1fr;
     max-width: 88%;
     gap: 20px;
+  padding-top:36px;
   }
 }
