--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,5 +4,21 @@
   min-height: 74px;
   display: flex;
   padding-top: 45px;
-  border-bottom: 1px solid #545454;
+  border-bottom: 1px solid rgb(84, 84, 84, 0.7);
+}
+
+
+@media screen and (max-width: 1000px) {
+  .header {
+    max-width: 85%;
+  }
+  
+}
+@media screen and (max-width: 320px) {
+  .header {
+    max-width: 100%;
+    padding-top: 28px;
+    min-height: 0;
+  }
+  
 }
