--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -6,9 +6,23 @@
   align-items: center;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 1000px) {
+  .profile {
+    margin: 10px auto 0 auto;
+    max-width: 85%;
+  }
+
+
+@media screen and (max-width: 800px) {
   .profile {
     flex-direction: column;
     max-width: 88%;
   }
+}
+
+@media screen and (max-width: 320px) {
+  .profile {
+    margin: 38px auto 0 auto;
+  }
+  
 }
