--- a/blocks/body/body.css
+++ b/blocks/body/body.css
@@ -1,10 +1,10 @@
-.main-page {
+.body {
   font-family: "Inter", "Arial", "Helvetica", sans-serif;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: black;
-  max-width: 100vw;
+  max-width: 1280px;
   min-height: 100vh;
   margin: auto;
   color: #ffffff;
@@ -12,7 +12,7 @@
 }
 
 @media screen and (max-width: 320px) {
-  .main-page {
+  .body {
     max-width: 320px;
   }
 }
