--- a/blocks/footer/__logo/footer__logo.css
+++ b/blocks/footer/__logo/footer__logo.css
@@ -2,8 +2,15 @@
   object-fit: contain;
   color: #545454;
   font-style: normal;
-font-weight: 400;
-font-size: 18px;
-line-height: 22px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  margin: 0;
 }
 
+@media screen and (max-width: 320px) {
+  .footer__logo {
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
