--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,10 +1,13 @@
 .header {
   max-width: 69%;
+  
   margin: 0 auto;
   min-height: 74px;
   display: flex;
   padding-top: 45px;
   border-bottom: 1px solid rgb(84, 84, 84, 0.7);
+  background-color: black;
+  
 }
 
 
