--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -7,7 +7,8 @@
   border-radius: 10px;
   z-index: 1;
   align-self: center;
-  margin:105px auto 0 auto;
+  margin: 0 auto;
+  position: relative;
 }
 
 .container[type="text"] {
