--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -1,12 +1,15 @@
 .popup__save-button {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
   background: black;
   color: white;
   border: none;
   border-radius: 2px;
   width: 100%;
   height: 50px;
-  font-size: 18px;
-  line-height: 22px;
   text-align: center;
   margin-top: 48px;
 }
