--- a/blocks/popup/__text/popup__text.css
+++ b/blocks/popup/__text/popup__text.css
@@ -1,7 +1,12 @@
 .popup__text {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
   color: black;
   border: 0;
-border-bottom: 1px solid rgb(0, 0,0, 0.2);
+  border-bottom: 1px solid rgb(0, 0, 0, 0.2);
   width: 100%;
   margin-top: 5px;
   font-size: 14px;
