--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -2,7 +2,7 @@
   max-width: 120px;
   min-height: 120px;
   border-radius: 100%;
-  margin: 3.75px 26.25px 3.75px 22.5px;
+ /* margin: 3.75px 26.25px 3.75px 22.5px; */
   grid-area: avatar;
   object-fit: cover;
 }
