--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -5,6 +5,7 @@
   grid-template-columns: repeat(2, max-content);
   grid-template-rows: repeat(2, max-content);
   align-items: center;
+  margin-left: 29px;
 }
 
 
