--- a/blocks/popup/__text/popup__text.css
+++ b/blocks/popup/__text/popup__text.css
@@ -11,3 +11,12 @@
   margin-top: 5px;
   margin-bottom: 13px;
 }
+
+@media screen and (max-width: 320px) {
+  .popup__text {
+    margin-top: 19px;
+    margin-bottom: 13px;
+    padding-bottom: 5px;
+  }
+  
+}
