--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -12,6 +12,8 @@
 
 @media screen and (max-width: 400px) {
   .popup__title {
+    
+    margin-bottom: 55px;
     font-size: 18px;
     line-height: 22px;
   }
