--- a/blocks/element/__like-bar/element__like-bar.css
+++ b/blocks/element/__like-bar/element__like-bar.css
@@ -3,6 +3,8 @@
   margin: 25px 15px 25px 21px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  
 }
 
 @media screen and (max-width: 320px) {
