--- a/blocks/popup/__close-button-image/popup__close-button-image.css
+++ b/blocks/popup/__close-button-image/popup__close-button-image.css
@@ -1,6 +1,6 @@
-@media screen and (max-width: 320px) {
-  .popup__close-button-image {
-max-width: 20px;
-  }
-  
+.popup__close-button-image {
+  position: absolute;
+  background: none;
+  border: 0;
+
 }
