--- a/blocks/popup/__text/popup__text.css
+++ b/blocks/popup/__text/popup__text.css
@@ -9,6 +9,7 @@
   border-bottom: 1px solid rgb(0, 0, 0, 0.2);
   width: 100%;
   margin-top: 5px;
+  padding-bottom: 13px;
   margin-bottom: 13px;
 }
 
