--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,10 +1,12 @@
 .popup {
   background-color: rgba(0, 0, 0, 0.5);
-
-  display: none;
+  visibility: hidden;
+  opacity: 0;
+  transition-duration: 0.5s, 0s, 0s, 0.5s;
   position: fixed;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
+  display: flex;
 }
