--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -4,7 +4,7 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  background: black;
+  background-color: black;
   color: white;
   border: none;
   border-radius: 2px;
@@ -14,11 +14,13 @@
   margin-top: 48px;
 }
 
+
 .popup__save-button:hover {
   opacity: 0.8;
   cursor: pointer;
   transition: opacity 1s;
 }
+
 
 @media screen and (max-width: 320px) {
   .popup__save-button {
