--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,4 @@
-.popup__text {
+.popup__input {
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
@@ -8,16 +8,19 @@
   border: 0;
   border-bottom: 1px solid rgb(0, 0, 0, 0.2);
   width: 100%;
-  margin-top: 5px;
+  margin-top: 13px;
   padding-bottom: 13px;
-  margin-bottom: 13px;
+  margin-bottom: 5px;
 }
 
 @media screen and (max-width: 320px) {
-  .popup__text {
+  .popup__input {
     margin-top: 19px;
-    margin-bottom: 13px;
     padding-bottom: 5px;
   }
   
+}
+
+.popup__input:last-of-type {
+  margin-top: 30px;
 }
