--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,5 @@
 .popup {
-  background-color: rgba(0, 0, 0, 0.5);
+  /*background-color: rgba(0, 0, 0, 0.5);*/
   visibility: hidden;
   opacity: 0;
   transition-duration: 0.5s, 0s, 0s, 0.5s;
@@ -7,6 +7,6 @@
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 100%; 
   display: flex;
 }
