Проект 6 после изменений

--- a/blocks/profile/__whois/profile__whois.css
+++ b/blocks/profile/__whois/profile__whois.css
@@ -12,6 +12,10 @@
   align-items: center;
 }
 
+.profile__whois:hover {
+  cursor: pointer;
+}
+
 @media screen and (max-width: 450px) {
   .profile__whois {
     margin: 8px 15px 16px 15px;
