--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -10,6 +10,10 @@
   overflow: hidden;
 }
 
+.profile__name:hover {
+  cursor: pointer;
+}
+
 @media screen and (max-width: 620px) {
   .profile__name {
     max-width: 290px;
